--- a/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
@@ -1434,7 +1434,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -2971,7 +2971,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
