--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -1458,7 +1458,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -2995,7 +2995,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -4588,7 +4588,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -6125,7 +6125,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -7719,7 +7719,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -9256,7 +9256,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -10850,7 +10850,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -12387,7 +12387,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -13981,7 +13981,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -15518,7 +15518,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -17112,7 +17112,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -18649,7 +18649,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
@@ -20244,7 +20244,7 @@ spec:
                           minimum: 1
                           type: integer
                         metrics:
-                          description: Metrics contains thw controller metrics configuration
+                          description: Metrics contains the controller metrics configuration
                           properties:
                             bindAddress:
                               description: |-
@@ -21781,7 +21781,7 @@ spec:
                     minimum: 1
                     type: integer
                   metrics:
-                    description: Metrics contains thw controller metrics configuration
+                    description: Metrics contains the controller metrics configuration
                     properties:
                       bindAddress:
                         description: |-
