unified feature-gate handling

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -32,6 +32,15 @@ spec:
 {{- if $addonVersion }}
   version: {{ $addonVersion }}
 {{- end }}
+{{- if $.Values.manager }}
+{{- if and $.Values.manager.featureGates $.Values.manager.featureGates.addon }}
+  manager:
+    featureGates:
+    {{- range $key, $value := $.Values.manager.featureGates.addon }}
+      {{ $key }}: {{ $value }}
+    {{- end }}
+{{- end }}
+{{- end }}
 {{- if $.Values.secretName }}
   secretName: {{ $.Values.secretName }}
 {{- end }}
